--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>home page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veritatis sed, quas blanditiis repellat laboriosam, quaerat sunt fuga modi consequatur est maxime omnis placeat dolore autem numquam beatae aut voluptate.</p>
 </body>
 </html>
